# cpp_starter_project

./: CMakeLists.txt  Dockerfile  Makefile
cmake/: Boost.cmake  CompilerWarnings.cmake  FindOpenSplice.cmake  Googletest.cmake  MacroOpenSplice.cmake  Opensplice.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  osmacros.cmake
src/: CMakeLists.txt  implementation.cpp  publisher.cpp  subscriber.cpp
test/: CMakeLists.txt  google_tests.cpp
